--- a/Building-BERT-model.ipynb
+++ b/Building-BERT-model.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Building_BERT_model.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP8lbXcOvYwnAO6PCLOwHXP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,7 +69,7 @@
         "    print('No GPU available, using the CPU instead.')\n",
         "    device = torch.device(\"cpu\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,7 +99,36 @@
         "colab": {}
       },
       "source": [
-        ""
+        "import pandas\n",
+        "\n",
+        "with open('/content/arc-code-ti-publications.pkl', 'rb') as f:\n",
+        "    pubs = pandas.read_pickle(f)\n",
+        "\n",
+        "import re\n",
+        "TAG_RE = re.compile(r'<[^>]+>')\n",
+        "\n",
+        "def remove_tags(text):\n",
+        "    return TAG_RE.sub('', text)\n",
+        "    \n",
+        "def preprocess_text(sen):\n",
+        "    # Removing html tags\n",
+        "    sentence = remove_tags(sen)\n",
+        "\n",
+        "    # Remove punctuations and numbers\n",
+        "    sentence = re.sub('[^a-zA-Z]', ' ', sentence)\n",
+        "\n",
+        "    # Single character removal\n",
+        "    sentence = re.sub(r\"\\s+[a-zA-Z]\\s+\", ' ', sentence)\n",
+        "\n",
+        "    # Removing multiple spaces\n",
+        "    sentence = re.sub(r'\\s+', ' ', sentence)\n",
+        "\n",
+        "    return sentence\n",
+        "\n",
+        "full_texts = []\n",
+        "sentences = list(pubs['Text'])\n",
+        "for sen in sentences:\n",
+        "    full_texts.append(preprocess_text(str(sen)))"
       ],
       "execution_count": null,
       "outputs": []
