--- a/Building-BERT-model.ipynb
+++ b/Building-BERT-model.ipynb
@@ -181,6 +181,67 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qBNrUX9uvwNQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Tokenize entire dataset\n",
+        "\n",
+        "max_len = 0\n",
+        "\n",
+        "# For every sentence...\n",
+        "for sent in sentences:\n",
+        "\n",
+        "    # Tokenize the text and add CLS and SEP tokens.\n",
+        "    input_ids = tokenizer.encode(sent, add_special_tokens=True)\n",
+        "\n",
+        "    # Update the maximum sentence length.\n",
+        "    max_len = max(max_len, len(input_ids))\n",
+        "\n",
+        "print('Max sentence length: ', max_len)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fNlxZnv-vzOi",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "input_ids = []\n",
+        "attention_masks = []\n",
+        "\n",
+        "for sent in sentences:\n",
+        "  encoded_dict = tokenizer.encode_plus(\n",
+        "      sent,\n",
+        "      add_special_toekns = True, # adds CLS and SEP tokens\n",
+        "      max_length = 64,\n",
+        "      pad_to_max_length = True,\n",
+        "      return_attention_mask = True, # Creates attention masks\n",
+        "      return_tensors = 'pt', #pytorch\n",
+        "  )\n",
+        "\n",
+        "    input_ids.append(encoded_dict['input_ids'])\n",
+        "    attention_masks.append(encoded_dict['attention_mask'])\n",
+        "\n",
+        "# convert lists to tensors\n",
+        "input_ids = torch.cat(input_ids, dim=0)\n",
+        "attention_masks = torch.cat(attention_masks, dim=0)\n",
+        "labels = torch.tensor(labels)\n",
+        "\n",
+        "print('Original: ', sentences[0])\n",
+        "print('Token IDs:', input_ids[0])"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
