--- a/Building-BERT-model.ipynb
+++ b/Building-BERT-model.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/vizzies/Building-BERT-Model/blob/master/Building-BERT-model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/vizzies/Building-BERT-Model/blob/herb-work/Building-BERT-model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -100,6 +100,7 @@
       },
       "source": [
         "import pandas\n",
+        "import unicodedata\n",
         "\n",
         "with open('/content/arc-code-ti-publications.pkl', 'rb') as f:\n",
         "    pubs = pandas.read_pickle(f)\n",
@@ -113,6 +114,12 @@
         "def preprocess_text(sen):\n",
         "    # Removing html tags\n",
         "    sentence = remove_tags(sen)\n",
+        "\n",
+        "    # Remove hyphenation if at the end of a line\n",
+        "    sentence = sentence.replace('-\\n', '')\n",
+        "\n",
+        "    # Fix ligatures\n",
+        "    sentence = unicodedata.normalize(\"NFKD\", sentence)\n",
         "\n",
         "    # Remove punctuations and numbers\n",
         "    sentence = re.sub('[^a-zA-Z]', ' ', sentence)\n",
