--- a/Building-BERT-model.ipynb
+++ b/Building-BERT-model.ipynb
@@ -276,6 +276,37 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uyK2ABQW_VPQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# dataset iterator to save memory during training\n",
+        "\n",
+        "from torch.utils.data import DataLoader, RandomSampler, SequentialSampler\n",
+        "\n",
+        "# 16 or 32 is ok\n",
+        "batch_size = 32\n",
+        "\n",
+        "# dataloaders for training and validation in random order\n",
+        "train_dataloader = DataLoader(\n",
+        "            train_dataset,  \n",
+        "            sampler = RandomSampler(train_dataset), \n",
+        "            batch_size = batch_size \n",
+        "        )\n",
+        "\n",
+        "# sequential reading for validation\n",
+        "validation_dataloader = DataLoader(\n",
+        "            val_dataset,\n",
+        "            sampler = SequentialSampler(val_dataset), \n",
+        "            batch_size = batch_size"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
