start model training and optimizer

--- a/Building-BERT-model.ipynb
+++ b/Building-BERT-model.ipynb
@@ -307,6 +307,187 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Vzp4mrNSW51a",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Helper Functions"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ERVDrzXgW7v0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Function to calculate the accuracy of our predictions vs labels\n",
+        "import numpy as np\n",
+        "\n",
+        "def flat_accuracy(preds, labels):\n",
+        "    pred_flat = np.argmax(preds, axis=1).flatten()\n",
+        "    labels_flat = labels.flatten()\n",
+        "    return np.sum(pred_flat == labels_flat) / len(labels_flat)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5q8iaWFvXDAP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# akes a time in seconds and returns a string hh:mm:ss\n",
+        "\n",
+        "import time\n",
+        "import datetime\n",
+        "\n",
+        "def format_time(elapsed):\n",
+        "    # Round to the nearest second.\n",
+        "    elapsed_rounded = int(round((elapsed)))\n",
+        "    \n",
+        "    # Format as hh:mm:ss\n",
+        "    return str(datetime.timedelta(seconds=elapsed_rounded))\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "io7X1vjOJG9D",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Train Model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1X603NeDJKOn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from transformers import BertForSequenceClassification, AdamW, BertConfig\n",
+        "\n",
+        "model = BertForSequenceClassification.from_pretrained(\n",
+        "    \"bert-base-uncased\", # uncased vocab 12 layer model\n",
+        "    num_labels = 2, \n",
+        "    output_attentions = False, \n",
+        "    output_hidden_states = False, \n",
+        ")\n",
+        "\n",
+        "# run on gpu\n",
+        "model.cuda()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "K6CDtFVcVo_g",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# all model parameters (i.e. embedding layers, weights, bias, encoder layers, etc)\n",
+        "params = list(model.named_parameters())\n",
+        "\n",
+        "print('The BERT model has {:} different named parameters.\\n'.format(len(params)))\n",
+        "\n",
+        "print('==== Embedding Layer ====\\n')\n",
+        "\n",
+        "for p in params[0:5]:\n",
+        "    print(\"{:<55} {:>12}\".format(p[0], str(tuple(p[1].size()))))\n",
+        "\n",
+        "print('\\n==== First Transformer ====\\n')\n",
+        "\n",
+        "for p in params[5:21]:\n",
+        "    print(\"{:<55} {:>12}\".format(p[0], str(tuple(p[1].size()))))\n",
+        "\n",
+        "print('\\n==== Output Layer ====\\n')\n",
+        "\n",
+        "for p in params[-4:]:\n",
+        "    print(\"{:<55} {:>12}\".format(p[0], str(tuple(p[1].size()))))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nAZncZ8BWEgd",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Optimizer and LR Scheduler\n",
+        "AdamW optimizer [here](https://github.com/huggingface/transformers/blob/5bfcd0485ece086ebcbed2d008813037968a9e58/examples/run_glue.py#L109) in `runglue.py`\n",
+        "\n",
+        "* Batch size: 32 (set in DataLoaders)\n",
+        "* Learning rate: 2e-5\n",
+        "* Epochs: 4 "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kTn63YfWWKGw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "optimizer = AdamW(model.parameters(),\n",
+        "                  lr = 2e-5, # args.learning_rate - default is 5e-5\n",
+        "                  eps = 1e-8 # args.adam_epsilon  - default is 1e-8\n",
+        "                )"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OzDOObbxWm70",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from transformers import get_linear_schedule_with_warmup\n",
+        "\n",
+        "# amt of training epochs, keep between 2 - 4\n",
+        "epochs = 4\n",
+        "\n",
+        "# [number of batches] x [number of epochs]\n",
+        "total_steps = len(train_dataloader) * epochs\n",
+        "\n",
+        "# learning rate scheduler\n",
+        "scheduler = get_linear_schedule_with_warmup(optimizer, \n",
+        "                                            num_warmup_steps = 0, \n",
+        "                                            num_training_steps = total_steps)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bgZ1HbKNXOaq",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Training Loop"
+      ]
     }
   ]
 }
