--- a/Semantic_Search.ipynb
+++ b/Semantic_Search.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Semantic-Search.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPCcvD18JgPnu5L+9wQrDpY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -98,8 +97,17 @@
         "    return TAG_RE.sub('', text)\n",
         "    \n",
         "def preprocess_text(sen):\n",
+        "\n",
+        "    sentence = str(sen)\n",
+        "\n",
         "    # Removing html tags\n",
-        "    sentence = remove_tags(sen)\n",
+        "    sentence = remove_tags(sentence)\n",
+        "\n",
+        "    # Remove hyphenation if at the end of a line\n",
+        "    sentence = sentence.replace('-\\n', '')\n",
+        "\n",
+        "    # Fix ligatures\n",
+        "    sentence = unicodedata.normalize(\"NFKD\", sentence)\n",
         "\n",
         "    # Remove punctuations and numbers\n",
         "    sentence = re.sub('[^a-zA-Z]', ' ', sentence)\n",
