--- a/Semantic_Search.ipynb
+++ b/Semantic_Search.ipynb
@@ -120,10 +120,13 @@
         "\n",
         "    return sentence\n",
         "\n",
-        "full_texts = []\n",
-        "sentences = list(pubs['Text'])\n",
-        "for sen in sentences:\n",
-        "    full_texts.append(preprocess_text(str(sen)))"
+        "# Not really needed any more but will leave in and just comment out\n",
+        "# full_texts = []\n",
+        "# sentences = list(pubs['Text'])\n",
+        "# for sen in sentences:\n",
+        "#     full_texts.append(preprocess_text(str(sen)))\n",
+        "\n",
+        "pubs['Text Processed'] = pubs.apply(lambda row: preprocess_text(row['Text']), axis=1)\n"
       ],
       "execution_count": null,
       "outputs": []
