--- a/Semantic_Search.ipynb
+++ b/Semantic_Search.ipynb
@@ -126,7 +126,10 @@
         "# for sen in sentences:\n",
         "#     full_texts.append(preprocess_text(str(sen)))\n",
         "\n",
-        "pubs['Text Processed'] = pubs.apply(lambda row: preprocess_text(row['Text']), axis=1)\n"
+        "pubs['Text Processed'] = pubs.apply(lambda row: preprocess_text(row['Text']), axis=1)\n",
+        "\n",
+        "text_df = pubs[['Text Processed',]].copy()\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
