--- a/Semantic_Search.ipynb
+++ b/Semantic_Search.ipynb
@@ -529,7 +529,7 @@
         "# from google.colab import drive\n",
         "# drive.mount(‘/content/gdrive’)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -563,7 +563,7 @@
         "    print('No GPU available, using the CPU instead.')\n",
         "    device = torch.device(\"cpu\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -640,13 +640,17 @@
         "# for sen in sentences:\n",
         "#     full_texts.append(preprocess_text(str(sen)))\n",
         "\n",
+        "pubs.drop(pubs[pubs['Text'] == 'PDF error occurred'].index, inplace = True) \n",
+        "\n",
+        "pubs.drop_duplicates(subset=['Text'])\n",
+        "\n",
         "pubs['Text Processed'] = pubs.apply(lambda row: preprocess_text(row['Text']), axis=1)\n",
         "\n",
         "text_df = pubs[['Text Processed',]].copy()\n",
         "\n",
         "print(text_df)\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -685,7 +689,7 @@
       "source": [
         "!pip install -U sentence-transformers"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -801,7 +805,7 @@
         "        print(\"Abstract:  \" , row_dict[\"Abstract\"] , \"\\n\")\n",
         "        print(\"-------------------------------------------\")"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
