--- a/Semantic_Search.ipynb
+++ b/Semantic_Search.ipynb
@@ -800,7 +800,7 @@
         "\n",
         "\n",
         "    for idx, distance in results[0:closest_n]:\n",
-        "        print(\"Score:   \", \"(Score: %.4f)\" % (1-distance) , \"\\n\" )\n",
+        "        print(\"Score:   \", \"(Score: %.4f)\" % (1-distance) * 100.0 , \"%\\n\" )\n",
         "        row_dict = pubs.iloc[idx].to_dict() # pubs.loc[pubs.index== sentences[idx]].to_dict()\n",
         "        #print(row_dict)\n",
         "        print(\"Title:  \" , row_dict[\"Title\"]  , \"\\n\")\n",
