--- a/Semantic_Search.ipynb
+++ b/Semantic_Search.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Semantic-Search.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -564,7 +563,7 @@
         "    print('No GPU available, using the CPU instead.')\n",
         "    device = torch.device(\"cpu\")"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -653,7 +652,7 @@
         "\n",
         "print(text_df)\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -692,7 +691,7 @@
       "source": [
         "!pip install -U sentence-transformers"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -801,7 +800,7 @@
         "\n",
         "# Print out all information for the publications related to user query and a relevancy score\n",
         "    for idx, distance in results[0:closest_n]:\n",
-        "        print(\"Relevancy Score:   \", \"(Score: %.4f)\" % ((1-distance) * 100.0) , \"%\\n\" )\n",
+        "        print(\"Relevancy Score:   \", \"(Score: %.0f%%)\" % ((1-distance) * 100.0) , \"\\n\" )\n",
         "        row_dict = pubs.iloc[idx].to_dict() # pubs.loc[pubs.index== sentences[idx]].to_dict()\n",
         "        #print(row_dict)\n",
         "        print(\"Title:  \" , row_dict[\"Title\"]  , \"\\n\")\n",
@@ -812,7 +811,7 @@
         "        print(\"Abstract:  \" , row_dict[\"Abstract\"] , \"\\n\")\n",
         "        print(\"-------------------------------------------\")"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
